# GameCrate

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.dev-data/: README.md
.devcontainer/: README.md  devcontainer.json
.github/ISSUE_TEMPLATE/: compatibility_report.yml  config.yml  install_failure.yml
.github/workflows/: build.yml  winget-publish.yml  winget-validate.yml
docs/: ARCHITECTURE.md  CLI.md  COMPATIBILITY_MATRIX.md  DEVELOPMENT.md  GAME_COMPATIBILITY.md  GUI.md  HOW_IT_RUNS.md  README.md  SANDBOXED_INSTALL.md  SCOPE.md  TESTING.md  THREAT_MODEL.md  VIRTUAL_STORAGE.md  WINGET.md
package/: README.txt
profiles/: schema.json
profiles/examples/: offline-indie.json
src/gui/GameCrate.Gui/: App.xaml  App.xaml.cs  GameCrate.Gui.csproj  InstallWindow.xaml  InstallWindow.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  app.manifest
src/gui/GameCrate.Gui/Models/: GameProfile.cs  InstallReportSummary.cs
src/gui/GameCrate.Gui/Services/: CliEncoding.cs  GameCrateResult.cs  GameCrateService.cs  InstallPathValidator.cs
src/launcher/: AclManager.cpp  AppContainerLauncher.cpp  ConsoleIo.cpp  DataPaths.cpp  FootprintScanner.cpp  InstallManager.cpp  ProfileStore.cpp  RegistryScanner.cpp  VirtualStorage.cpp  Win32Error.cpp  main.cpp
src/launcher/include/gamecrate/: AclManager.hpp  AppContainerLauncher.hpp  ConsoleIo.hpp  DataPaths.hpp  FootprintScanner.hpp  InstallManager.hpp  ProfileStore.hpp  RegistryScanner.hpp  VirtualStorage.hpp  Win32Error.hpp
src/launcher/include/windoze/: AclManager.hpp  AppContainerLauncher.hpp  FootprintScanner.hpp  InstallManager.hpp  ProfileStore.hpp
tools/: Enter-GameCrateDev.ps1  Grant-ProfileAcls.ps1  Install-GameSandbox.ps1  New-GameSandbox.ps1  build.ps1  housekeep-repo.ps1  update-winget-manifest.ps1  validate-profiles.py
winget/manifests/r/RenegadeRadio/GameCrate/0.4.8/: RenegadeRadio.GameCrate.installer.yaml  RenegadeRadio.GameCrate.locale.en-US.yaml  RenegadeRadio.GameCrate.yaml
